HelloUltraviolet/Fixtures/RejectedSource/FFI/HostExportMixedMode/Expected.uv
//! Expected diagnostic metadata for the HostExportMixedMode rejected-source specimen.

expectedDiagnostic("E-SYS-3358", "rule.23.HostExport-MixedMode-Err")
